# airdrop-demo

./: Cargo.toml
src/: contract.rs  contract_unit_tests.rs  lib.rs  service.rs  service_unit_tests.rs  signature_payload.rs  test_utils.rs
tests/: payments.rs
