[package]
name = "airdrop-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.6", default-features = false, features = ["k256", "serde"] }
alloy-sol-types = { version = "0.8.6", default-features = false }
async-graphql = { version = "=7.0.2", default-features = false }
async-graphql-derive = { version = "=7.0.2", default-features = false }
hex = "0.4.3"
indexmap = "2.6.0"
k256 = { version = "*", default-features = false }
linera-sdk = "0.14.0"
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0.210", features = ["derive"] }

[dev-dependencies]
airdrop-demo = { path = ".", features = ["test"] }
alloy-primitives = { version = "0.8.6", default-features = false, features = ["getrandom"] }
linera-sdk = { version = "0.14.0", features = ["test"]  }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "0.14.0", features = ["test", "wasmer"]  }
tokio = "1.39.3"

[features]
test = []

[[bin]]
name = "airdrop_demo_contract"
path = "src/contract.rs"

[[bin]]
name = "airdrop_demo_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
